fix: parent container has wrong width

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 /* global css */
 
 /* Make the container a bit wider, default is 940*/
+.base-main-wrapper,
 .inner-main-wrapper {
-  width: 1020px;
+  width: 1020px !important;
 }
 
 #hb_extractor-container {
